--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@iconify/react": "^4.0.1"
   }
 }
